fix: remove visibility hidden styles and clean up language-ready class handling

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -56,12 +56,6 @@ $text: black;
 
 body {
   hyphens: auto;
-  /* visibility: hidden; /* This hides the content */
-}
-
-/* This class will be added by JavaScript when the language specific content is ready to be shown */
-body.language-ready {
-  visibility: visible;
 }
 
 pre code {
